lab2/routes.tf
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.main_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "Public Route Table"
  }
}

resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.main_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name = "Private Route Table"
  }
}


resource "aws_route_table_association" "public_route_table_association" {
  for_each = { for idx, subnet in aws_subnet.subnets : idx => subnet }
  route_table_id = each.value.tags["Type"] == "Public" ? aws_route_table.public_route_table.id : aws_route_table.private_route_table.id
  subnet_id =  each.value.id
}
