lab2/security_groups.tf
resource "aws_security_group" "public_sg" {
  name = "public-sg"
  vpc_id = aws_vpc.main_vpc.id
  ingress {
    from_port = 22
    to_port = 22
    cidr_blocks = ["0.0.0.0/0"]
    protocol = "TCP"
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "Public Sq"
  }
}

resource "aws_security_group" "private_sg" {
  name = "private-sg"
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    from_port = 22
    to_port = 22
    cidr_blocks = [ aws_vpc.main_vpc.cidr_block ]

    protocol = "TCP"
  }

  ingress {
    from_port = 3000
    to_port = 3000
    cidr_blocks = [ aws_vpc.main_vpc.cidr_block ]
    protocol = "TCP"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "Private Sq"
  }
}



resource "aws_security_group" "database_rds" {
  name = "database-rds-sg"
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    security_groups = [ aws_security_group.private_sg.id ]
    from_port = 3306
    to_port = 3306
    protocol = "TCP"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "RDS Private Sq"
  }
}


resource "aws_security_group" "redis" {
  name = "redis-sg"
  vpc_id = aws_vpc.main_vpc.id

  ingress {
    security_groups = [ aws_security_group.private_sg.id ]
    from_port = 6379
    to_port = 6379
    protocol = "TCP"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "REDIS Private Sg"
  }
}
